@@ -1,5 +1,14 @@
 2011-10-24  Carlos Garcia Campos  <cgarcia@igalia.com>
 
+        [GTK] Fix make distcheck build
+        https://bugs.webkit.org/show_bug.cgi?id=69745
+
+        Reviewed by Martin Robinson.
+
+        * GNUmakefile.am:
+
+2011-10-24  Carlos Garcia Campos  <cgarcia@igalia.com>
+
         [GTK] Initial implementation of back forward list for WebKit2 GTK+ API
         https://bugs.webkit.org/show_bug.cgi?id=69343
 
